[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/Themes_v2/SimpleBgPanel.tres" type="StyleBox" id=1]
[ext_resource path="res://assets/Fonts_v2/FontThemes/TitlesMiddle.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/scenes/QuestPanelV2.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/iconsgear/SwordBasic.png" type="Texture" id=4]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/NonDecorButton_with_Font.tres" type="Theme" id=6]
[ext_resource path="res://assets/images/gui/inventory/itemicon1.png" type="Texture" id=7]
[ext_resource path="res://assets/images/gui/inventory/itemicon4.png" type="Texture" id=8]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Pressed.tres" type="StyleBox" id=9]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Hover.tres" type="StyleBox" id=10]
[ext_resource path="res://assets/Themes_v2/CHAR_CREATION/Button_Colored_Normal.tres" type="StyleBox" id=11]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/PT_24_Label.tres" type="Theme" id=12]
[ext_resource path="res://assets/Fonts_v2/FontThemes/MainMiddle.tres" type="DynamicFont" id=13]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/button_stats.png" type="Texture" id=14]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/button_stats_hover.png" type="Texture" id=15]
[ext_resource path="res://assets/Textures_v2/INVENTORY/Buttons/button_stats_pressed.png" type="Texture" id=16]
[ext_resource path="res://gui_modules/Mansion/Scripts/MansionJournalModule.gd" type="Script" id=19]
[ext_resource path="res://assets/Themes_v2/UNIVERSAL/MansionJournalModule.tres" type="StyleBox" id=20]

[sub_resource type="ImageTexture" id=2]

[node name="MansionJournalModule" type="Panel"]
margin_right = 860.0
margin_bottom = 800.0
custom_styles/panel = ExtResource( 20 )
script = ExtResource( 19 )

[node name="Background" type="Panel" parent="."]
self_modulate = Color( 0, 0, 0, 0.823529 )
show_behind_parent = true
margin_right = 860.0
margin_bottom = 800.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ActiveTasks" type="Label" parent="."]
margin_left = 74.2
margin_top = 29.136
margin_right = 308.2
margin_bottom = 80.136
custom_colors/font_color = Color( 0.976471, 0.882353, 0.505882, 1 )
custom_fonts/font = ExtResource( 2 )
text = "JOURNALLABLE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 46.0
margin_top = 169.0
margin_right = 338.0
margin_bottom = 694.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 292.0
size_flags_horizontal = 3

[node name="Button" type="Button" parent="ScrollContainer/VBoxContainer"]
visible = false
margin_right = 292.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
theme = ExtResource( 6 )
toggle_mode = true
text = "Text Teateya h hasjh"

[node name="QuestPanel" parent="." instance=ExtResource( 3 )]
margin_left = 362.0
margin_top = 10.0
margin_right = 832.0
margin_bottom = 720.0

[node name="CompleteButton" type="Button" parent="."]
margin_left = 382.0
margin_top = 716.948
margin_right = 599.002
margin_bottom = 761.948
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 11 )
text = "Complete"

[node name="SelectCharacter" type="Button" parent="."]
visible = false
margin_left = 382.0
margin_top = 716.948
margin_right = 599.002
margin_bottom = 761.948
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 11 )
text = "Select Character"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="."]
margin_left = 599.002
margin_top = 716.948
margin_right = 816.004
margin_bottom = 761.948
custom_colors/font_color = Color( 0.878431, 0.878431, 0.878431, 1 )
custom_fonts/font = ExtResource( 13 )
custom_styles/hover = ExtResource( 10 )
custom_styles/pressed = ExtResource( 9 )
custom_styles/normal = ExtResource( 11 )
text = "Forfeit"

[node name="Main" type="TextureButton" parent="."]
margin_left = 188.177
margin_top = 98.136
margin_right = 316.177
margin_bottom = 140.136
rect_scale = Vector2( -1, 1 )
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )
texture_focused = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Main"]
margin_left = 103.0
margin_right = 206.0
margin_bottom = 42.0
rect_scale = Vector2( -1, 1 )
theme = ExtResource( 12 )
text = "JOURNALMAIN"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Minor" type="TextureButton" parent="."]
margin_left = 188.177
margin_top = 98.136
margin_right = 316.177
margin_bottom = 140.136
toggle_mode = true
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 15 )
texture_focused = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Minor"]
margin_right = 103.0
margin_bottom = 42.0
theme = ExtResource( 12 )
text = "JOURNALMINOR"
align = 1
valign = 1
clip_text = true

[node name="ItemSelectionPanel" type="Panel" parent="."]
visible = false
margin_left = 106.755
margin_top = 42.4658
margin_right = 744.755
margin_bottom = 739.466
custom_styles/panel = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="ItemSelectionPanel"]
margin_left = 27.6803
margin_top = 114.136
margin_right = 600.68
margin_bottom = 499.136
scroll_horizontal_enabled = false

[node name="GridContainer" type="GridContainer" parent="ItemSelectionPanel/ScrollContainer"]
columns = 7

[node name="Button" type="TextureButton" parent="ItemSelectionPanel/ScrollContainer/GridContainer"]
visible = false
margin_right = 75.0
margin_bottom = 75.0
rect_min_size = Vector2( 75, 75 )
toggle_mode = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="TextureRect" type="TextureRect" parent="ItemSelectionPanel/ScrollContainer/GridContainer/Button"]
show_behind_parent = true
margin_right = 75.0
margin_bottom = 75.0
texture = ExtResource( 4 )
expand = true

[node name="Amount" type="Label" parent="ItemSelectionPanel/ScrollContainer/GridContainer/Button"]
visible = false
margin_left = 25.731
margin_top = 46.3779
margin_right = 65.731
margin_bottom = 70.3779
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
align = 2

[node name="noitems" type="Label" parent="ItemSelectionPanel"]
margin_left = 217.01
margin_top = 139.171
margin_right = 414.01
margin_bottom = 163.171
text = "NOFITTINGITEMS"

[node name="ConfirmButton" type="Button" parent="ItemSelectionPanel"]
margin_left = 188.214
margin_top = 542.812
margin_right = 433.214
margin_bottom = 602.812
theme = ExtResource( 6 )
text = "Confirm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CancelButton" type="Button" parent="ItemSelectionPanel"]
margin_left = 188.214
margin_top = 612.812
margin_right = 433.214
margin_bottom = 672.812
theme = ExtResource( 6 )
text = "Cancel"

[node name="RichTextLabel" type="RichTextLabel" parent="ItemSelectionPanel"]
margin_left = 40.0
margin_top = 32.0
margin_right = 572.0
margin_bottom = 90.0
custom_fonts/normal_font = ExtResource( 13 )
